@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2024 Obeo.
+ * Copyright (c) 2024, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -10,19 +10,22 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
-package org.eclipse.sirius.web.application.images;
+package org.eclipse.sirius.web.application.views.explorer.services;
+
+import java.util.List;
+
+import org.eclipse.sirius.components.core.api.IImagePathService;
+import org.springframework.stereotype.Service;
 
 /**
- * Utility class containing constants for the images of Sirius Web.
+ * Used to allow the access to explorer images.
  *
  * @author sbegaudeau
  */
-public final class ImageConstants {
-    public static final String IMAGES_ROOT_FOLDER = "/icons/svg";
-
-    public static final String RESOURCE_SVG = IMAGES_ROOT_FOLDER + "/Resource.svg";
-
-    private ImageConstants() {
-        // Prevent instantiation
+@Service
+public class ExplorerImagePathService implements IImagePathService {
+    @Override
+    public List<String> getPaths() {
+        return List.of("/explorer");
     }
 }
